--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;600&display=swap" rel="stylesheet">
     <link href="assets/styles.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="cart">
         <h2>Your Shopping Cart</h2>
@@ -26,8 +28,8 @@
                 <div class="product-quanity">
                     <button id="quantity-down">-</button>
                     <button id="quantity-up">+</button>
-                    <div class="total-quantity">Quantity: 1</div>
-                    <p class="total-price">Total Price available at checkout</p>
+                    <div>Quantity:<span class="total-quantity">1</span></div>
+                    <p>Total Price: <span class="total-price">15</span></p>
                 </div>
             </div>
         </div>
@@ -38,4 +40,5 @@
     </div>
     <script src="assets/script.js"></script>
 </body>
+
 </html>
